# django-shop

./: .gitignore  pyproject.toml
shop/shop/: config.py  settings.py  urls.py
shop/users/: serializers.py  urls.py  views.py
